app-test/testdata/typesystem/neg/tuple-type-element-access/check/tuple2.check
testdata/typesystem/neg/tuple-type-element-access/src/tuple.cal:6:21: error: No member #3 for (int, bool).
            OUT <-- a.#3;
                    ^^^^